Added code copy functionality
- added copy button
- added styles

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <!-- bower:js -->
     <script src="../bower_components/react/react.js"></script>
     <script src="../bower_components/marked/lib/marked.js"></script>
+    <script src="../bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
