Prettify design and expand functionality
- Added navigation elements
- Additional ux checks

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Browsers support badges</title>
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <!-- build:css styles/css/vendor.css -->
@@ -23,7 +24,9 @@
 <html>
 <body>
     <main id="main" class="main"></main>
-
+    <footer class="footer">
+        made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+    </footer>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/react/react.js"></script>
