Moved favicons to images folder

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Browsers support badges</title>
-    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="./images/favicons/favicon.ico">
 
     <!-- build:css styles/css/vendor.css -->
     <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'> -->
