--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="../.tmp/styles/css/styles.css">
     <!-- endinject -->
+    <script>
+        setTimeout(function(){window.fbAsyncInit=function(){FB.init({appId:"1547693265447721",xfbml:!0,version:"v2.1"})},function(e,n,t){var o,c=e.getElementsByTagName(n)[0];e.getElementById(t)||(o=e.createElement(n),o.id=t,o.src="//connect.facebook.net/en_US/sdk.js",c.parentNode.insertBefore(o,c))}(document,"script","facebook-jssdk")},1e3);
+    </script>
     <!-- endbuild -->
 
 </head>
@@ -25,7 +28,31 @@
 <body>
     <main id="main" class="main"></main>
     <footer class="footer">
-        made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+        <div class="social-box">
+            <div class="social-box__facebook social-box__item">
+                <div id="fb-root"></div>
+                <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+            </div>
+            <div class="social-box__twitter social-box__item">
+                <a
+                    href="https://twitter.com/share"
+                    class="twitter-share-button"
+                    data-via="bogdan_plieshka"
+                    data-related="bogdan_plieshka"></a>
+                <script>
+                    setTimeout(function(){!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');},1e3);
+                </script>
+            </div>
+            <div class="social-box-gplus social-box__item">
+                <div class="g-plusone" data-size="medium"></div>
+                <script>
+                    setTimeout(function(){!function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://apis.google.com/js/platform.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}()},1e3);
+                </script>
+            </div>
+        </div>
+        <div class="footer__author">
+            made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+        </div>
     </footer>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
