--- a/index.html
+++ b/index.html
@@ -8,14 +8,38 @@
 
     <link rel="stylesheet" href="styles/css/vendor-28c5ed2441.css">
 
-    <link rel="stylesheet" href="styles/css/styles-3b43cf253c.css">
+    <link rel="stylesheet" href="styles/css/styles-f3b3b2b9bf.css">
 
 </head>
 <html>
 <body>
     <main id="main" class="main"></main>
     <footer class="footer">
-        made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+        <div class="social-box">
+            <div class="social-box__facebook social-box__item">
+                <div id="fb-root"></div>
+                <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+            </div>
+            <div class="social-box__twitter social-box__item">
+                <a
+                    href="https://twitter.com/share"
+                    class="twitter-share-button"
+                    data-via="bogdan_plieshka"
+                    data-related="bogdan_plieshka"></a>
+                <script>
+                    setTimeout(function(){!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');},1e3);
+                </script>
+            </div>
+            <div class="social-box-gplus social-box__item">
+                <div class="g-plusone" data-size="medium"></div>
+                <script>
+                    setTimeout(function(){!function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://apis.google.com/js/platform.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}()},1e3);
+                </script>
+            </div>
+        </div>
+        <div class="footer__author">
+            made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+        </div>
     </footer>
     <script src="scripts/vendor-4316eb40ff.js"></script>
 
