--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Browsers support badges genertor for README.md. Support of GitHub Flavored Markup.">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Browsers support badges for README.md">
+    <meta property="og:description" content="Browsers support badges genertor for README.md. Support of GitHub Flavored Markup.">
+    <meta property="og:url" content="http://godban.github.io/browsers-support-badges/">
+    <meta property="og:site_name" content="Browsers support badges">
+    <meta property="og:image" content="https://raw.githubusercontent.com/godban/browsers-support-badges/master/src/images/browsers-support-badges.png">
     <title>Browsers support badges</title>
+    <link rel="canonical" href="http://godban.github.io/browsers-support-badges/">
     <link rel="icon" type="image/png" href="./images/favicons/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/x-icon" href="./images/favicons/favicon.ico">
 
@@ -67,6 +76,14 @@
     <script src="../.tmp/scripts/generator.js"></script>
     <!-- endinject -->
     <!-- endbuild -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-28620403-7', 'auto');
+      ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
