--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <div class="social-box">
             <div class="social-box__facebook social-box__item">
                 <div id="fb-root"></div>
+                <script>
+                    setTimeout((function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s); js.id = id;
+                        js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4&appId=263072313724602";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));},1e3);
+                </script>
                 <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
             </div>
             <div class="social-box__twitter social-box__item">
