--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Browsers support badges genertor for README.md. Support of GitHub Flavored Markup.">
+    <meta name="description" content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Browsers support badges for README.md">
-    <meta property="og:description" content="Browsers support badges genertor for README.md. Support of GitHub Flavored Markup.">
+    <meta property="og:description" content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md">
     <meta property="og:url" content="http://godban.github.io/browsers-support-badges/">
     <meta property="og:site_name" content="Browsers support badges">
     <meta property="og:image" content="https://raw.githubusercontent.com/godban/browsers-support-badges/master/src/images/browsers-support-badges.png">
