--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                         js = d.createElement(s); js.id = id;
                         js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4&appId=263072313724602";
                         fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));},1e3);
+                    }(document, 'script', 'facebook-jssdk')),1e3);
                 </script>
                 <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
             </div>
@@ -60,6 +60,9 @@
                 <script>
                     setTimeout(function(){!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');},1e3);
                 </script>
+            </div>
+            <div class="social-box__item social-box__item--gh">
+                <iframe src="https://ghbtns.com/github-btn.html?user=godban&repo=browsers-support-badges&type=watch&count=true" frameborder="0" scrolling="0" height="20px"></iframe>
             </div>
             <div class="social-box-gplus social-box__item">
                 <div class="g-plusone" data-size="medium"></div>
