--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="styles/css/vendor-28c5ed2441.css">
 
-    <link rel="stylesheet" href="styles/css/styles-f3b3b2b9bf.css">
+    <link rel="stylesheet" href="styles/css/styles-7d437b94fa.css">
 
 </head>
 <html>
@@ -34,7 +34,7 @@
                         js = d.createElement(s); js.id = id;
                         js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4&appId=263072313724602";
                         fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));},1e3);
+                    }(document, 'script', 'facebook-jssdk')),1e3);
                 </script>
                 <div class="fb-like" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
             </div>
@@ -47,6 +47,9 @@
                 <script>
                     setTimeout(function(){!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','twitter-wjs');},1e3);
                 </script>
+            </div>
+            <div class="social-box__item social-box__item--gh">
+                <iframe src="https://ghbtns.com/github-btn.html?user=godban&repo=browsers-support-badges&type=watch&count=true" frameborder="0" scrolling="0" height="20px"></iframe>
             </div>
             <div class="social-box-gplus social-box__item">
                 <div class="g-plusone" data-size="medium"></div>
@@ -61,7 +64,7 @@
     </footer>
     <script src="scripts/vendor-4316eb40ff.js"></script>
 
-    <script src="scripts/scripts-abe07150ac.js"></script>
+    <script src="scripts/scripts-e74c25e2d2.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
