#3 fix Travis CI build

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="footer__author">
-            made by <span class="octicon octicon-person"></span> <a class="footer__link" href="http://godban.com.ua" target="_blank">Bogdan Plieshka</a>, <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
+            <a class="octicon octicon-mark-github footer__link" href="https://github.com/godban" target="_blank"></a>
         </div>
     </footer>
     <!-- build:js scripts/vendor.js -->
