--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,36 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md">
+    <meta
+      name="description"
+      content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md"
+    >
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Browsers support badges for README.md">
-    <meta property="og:description" content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md">
+    <meta property="og:title" content="Browsers support for README.md">
+    <meta
+      property="og:description"
+      content="Simply choose browsers that u support, see how it will looks like on GitHub and grab ready made code for your README.md"
+    >
     <meta property="og:url" content="http://godban.github.io/browsers-support-badges/">
     <meta property="og:site_name" content="Browsers support badges">
-    <meta property="og:image" content="https://raw.githubusercontent.com/godban/browsers-support-badges/master/src/images/browsers-support-badges.png">
+    <meta
+      property="og:image"
+      content="http://godban.github.io/browsers-support-badges/screen.png"
+    >
     <title>Browsers support badges</title>
     <link rel="canonical" href="http://godban.github.io/browsers-support-badges/">
     <link rel="icon" type="image/png" href="./favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
     <link rel="manifest" href="./manifest.json">
-    <script>
-        setTimeout(function(){window.fbAsyncInit=function(){FB.init({appId:"1547693265447721",xfbml:!0,version:"v2.1"})},function(e,n,t){let o,c=e.getElementsByTagName(n)[0];e.getElementById(t)||(o=e.createElement(n),o.id=t,o.src="//connect.facebook.net/en_US/sdk.js",c.parentNode.insertBefore(o,c))}(document,"script","facebook-jssdk")},1e3);
-    </script>
   </head>
   <body>
-  <div id="root"></div>
+    <div id="root"></div>
+    <div id="fb-root"></div>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-28620403-7', 'auto');
-        ga('send', 'pageview');
+        (function (i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o), m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');ga('create', 'UA-28620403-7', 'auto');ga('send', 'pageview');
     </script>
+    <script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
